[project]
name = "fsgrowth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mailerlite>=0.1.10",
    "matplotlib>=3.10.1",
    "msal>=1.32.0",
    "pandas>=2.2.3",
    "pretty-html-table>=0.9.16",
]
